created some tables schemas; created the comom pipeline; and some tests was ran in the spark notebook

--- a/notebooks/spark_notebook.ipynb
+++ b/notebooks/spark_notebook.ipynb
@@ -2,15 +2,268 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import pandas as pd\n",
+    "from pyspark.sql.functions import round as spark_round\n",
+    "\n",
+    "sys.path.append('..')\n",
+    "from etl import create_spark_session\n",
+    "from schemas import song_data_schema, log_data_schema, user_table_schema, song_table_schema, artist_table_schema, songplay_table_schema\n",
+    "from pipelines import basic_pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://192.168.100.38:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.2.0</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>k8s://127.0.0.1:16443</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>Udacity - Data Lake Project</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x7f99e5801e50>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark = create_spark_session(local=True)\n",
+    "spark.sparkContext.setLogLevel(\"ERROR\")\n",
+    "spark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_log_data = spark.read.format('json').schema(log_data_schema).option(\"recursiveFileLookup\",True).load('s3a://udacity-dend/log_data')\n",
+    "df_song_data = spark.read.format('json').schema(song_data_schema).option(\"recursiveFileLookup\",True).load('s3a://udacity-dend/song_data')\n",
+    "\n",
+    "df_joined = df_log_data.join(\n",
+    "    df_song_data, \n",
+    "    on=(df_log_data.song == df_song_data.title) & (spark_round(df_log_data.length, 4) == spark_round(df_song_data.duration, 4)),\n",
+    "    how='LEFT'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dict - get column name from expression\n",
+    "fields_to_rename = {\n",
+    "    'start_time': 'ts',\n",
+    "    'user_id': 'userId',\n",
+    "    'first_name': 'firstName',\n",
+    "    'last_name': 'lastName',\n",
+    "    'name': 'artist_name',\n",
+    "    'location': 'artist_location',\n",
+    "    'latitude': 'artist_latitude',\n",
+    "    'longitude': 'artist_longitude',\n",
+    "    'session_id': 'sessionId',\n",
+    "    'user_agent': 'userAgent'\n",
+    "}\n",
+    "\n",
+    "transformations = {\n",
+    "    'start_time': 'to_timestamp(start_time / 1000)', \n",
+    "    'user_id': 'INT(user_id)',\n",
+    "}\n",
+    "\n",
+    "my_basic_pipeline = basic_pipeline(fields_to_rename=fields_to_rename, transformations=transformations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "107"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_user = my_basic_pipeline((df_log_data, user_table_schema)).distinct()\n",
+    "df_user.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14896"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_songs = my_basic_pipeline((df_song_data, song_table_schema))\n",
+    "df_songs.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10025"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_artists = my_basic_pipeline((df_song_data, artist_table_schema)).distinct()\n",
+    "df_artists.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8056"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_songplays = my_basic_pipeline((df_joined, songplay_table_schema))\n",
+    "df_songplays.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "322"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_songplays.where(\"artist_id IS NOT NULL\").count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4f00076993a79c6ae49a7e3129977fe8e9ce55828899303a503ea49aa3f668a3"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.9 64-bit ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.9"
   },
   "orig_nbformat": 4
  },
