created some writer functions

--- a/notebooks/spark_notebook.ipynb
+++ b/notebooks/spark_notebook.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "sys.path.append('..')\n",
     "from etl import create_spark_session\n",
-    "from schemas import song_data_schema, log_data_schema, user_table_schema, song_table_schema, artist_table_schema, songplay_table_schema\n",
-    "from pipelines import basic_pipeline"
+    "from schemas import song_data_schema, log_data_schema, user_table_schema, song_table_schema, artist_table_schema, songplay_table_schema, time_table_schema\n",
+    "from basic_pipeline import create_basic_pipeline"
    ]
   },
   {
@@ -47,7 +47,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f99e5801e50>"
+       "<pyspark.sql.session.SparkSession at 0x7f2449bc8730>"
       ]
      },
      "execution_count": 2,
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "# dict - get column name from expression\n",
-    "fields_to_rename = {\n",
+    "rename_transformations = {\n",
     "    'start_time': 'ts',\n",
     "    'user_id': 'userId',\n",
     "    'first_name': 'firstName',\n",
@@ -94,154 +94,134 @@
     "    'latitude': 'artist_latitude',\n",
     "    'longitude': 'artist_longitude',\n",
     "    'session_id': 'sessionId',\n",
-    "    'user_agent': 'userAgent'\n",
+    "    'user_agent': 'userAgent' \n",
     "}\n",
     "\n",
-    "transformations = {\n",
-    "    'start_time': 'to_timestamp(start_time / 1000)', \n",
-    "    'user_id': 'INT(user_id)',\n",
+    "cast_transformations = {\n",
+    "    'start_time': 'to_timestamp(start_time / 1000) as start_time', \n",
+    "    'user_id': 'INT(user_id) as user_id',\n",
     "}\n",
     "\n",
-    "my_basic_pipeline = basic_pipeline(fields_to_rename=fields_to_rename, transformations=transformations)"
+    "time_transformations = {\n",
+    "  \"hour\": \"hour(start_time) as hour\",\n",
+    "  \"day\": \"dayofmonth(start_time) as day\",\n",
+    "  \"week\": \"weekofyear(start_time) as week\",\n",
+    "  \"month\": \"month(start_time) as month\",\n",
+    "  \"year\": \"year(start_time) as year\",\n",
+    "  \"weekday\": \"dayofweek(start_time) as weekday\",\n",
+    "}\n",
+    "\n",
+    "basic_pipeline = create_basic_pipeline(rename_transformations=rename_transformations, cast_transformations=cast_transformations)\n",
+    "time_basic_pipeline = create_basic_pipeline(cast_transformations=time_transformations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_users = basic_pipeline((df_log_data, user_table_schema)).distinct()\n",
+    "df_songs = basic_pipeline((df_song_data, song_table_schema))\n",
+    "df_artists = basic_pipeline((df_song_data, artist_table_schema)).distinct()\n",
+    "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
+    "df_times = time_basic_pipeline((df_songplays, time_table_schema)).distinct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "107"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_user = my_basic_pipeline((df_log_data, user_table_schema)).distinct()\n",
-    "df_user.count()"
+    "spark.conf.set(\"spark.sql.sources.partitionOverwriteMode\",\"dynamic\")\n",
+    "df_users.write \\\n",
+    "    .partitionBy('user_id') \\\n",
+    "    .option('schema', user_table_schema) \\\n",
+    "    .format('parquet') \\\n",
+    "    .mode('overwrite') \\\n",
+    "    .save('s3a://dutrajardim/udacity-dl-project/users.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "14896"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_songs = my_basic_pipeline((df_song_data, song_table_schema))\n",
-    "df_songs.count()"
+    "df_songs.write \\\n",
+    "    .partitionBy(['year', 'artist_id']) \\\n",
+    "    .option('schema', song_table_schema) \\\n",
+    "    .format('parquet') \\\n",
+    "    .mode('overwrite') \\\n",
+    "    .save('s3a://dutrajardim/udacity-dl-project/songs.parquet')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "10025"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_artists = my_basic_pipeline((df_song_data, artist_table_schema)).distinct()\n",
-    "df_artists.count()"
+    "df_artists.write \\\n",
+    "    .partitionBy(['artist_id']) \\\n",
+    "    .option('schema', artist_table_schema) \\\n",
+    "    .format('parquet') \\\n",
+    "    .mode('overwrite') \\\n",
+    "    .save('s3a://dutrajardim/udacity-dl-project/artists.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "8056"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_songplays = my_basic_pipeline((df_joined, songplay_table_schema))\n",
-    "df_songplays.count()"
+    "from pyspark.sql.functions import year, month\n",
+    "df_songplays \\\n",
+    "    .withColumn('year', year('start_time')) \\\n",
+    "    .withColumn('month', month('start_time')) \\\n",
+    "    .write \\\n",
+    "    .partitionBy(['year', 'month'])\n",
+    "    .option('schema', songplay_table_schema) \\\n",
+    "    .mode('overwrite') \\\n",
+    "    .save('s3a://dutrajardim/udacity-dl-project/songplays.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "data": {
-      "text/plain": [
-       "322"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_songplays.where(\"artist_id IS NOT NULL\").count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "spark.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
