--- a/notebooks/spark_notebook.ipynb
+++ b/notebooks/spark_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -47,10 +47,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f2449bc8730>"
+       "<pyspark.sql.session.SparkSession at 0x7f5d3dd07700>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,20 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_users = basic_pipeline((df_log_data, user_table_schema)).distinct()\n",
-    "df_songs = basic_pipeline((df_song_data, song_table_schema))\n",
-    "df_artists = basic_pipeline((df_song_data, artist_table_schema)).distinct()\n",
-    "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
-    "df_times = time_basic_pipeline((df_songplays, time_table_schema)).distinct()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -140,11 +127,12 @@
     }
    ],
    "source": [
-    "spark.conf.set(\"spark.sql.sources.partitionOverwriteMode\",\"dynamic\")\n",
+    "# spark.conf.set(\"spark.sql.sources.partitionOverwriteMode\",\"dynamic\")\n",
+    "df_users = basic_pipeline((df_log_data, user_table_schema)).where('user_id IS NOT NULL').distinct()\n",
     "df_users.write \\\n",
-    "    .partitionBy('user_id') \\\n",
     "    .option('schema', user_table_schema) \\\n",
     "    .format('parquet') \\\n",
+    "    .partitionBy('user_id') \\\n",
     "    .mode('overwrite') \\\n",
     "    .save('s3a://dutrajardim/udacity-dl-project/users.parquet')"
    ]
@@ -161,6 +149,7 @@
     }
    ],
    "source": [
+    "df_songs = basic_pipeline((df_song_data, song_table_schema))\n",
     "df_songs.write \\\n",
     "    .partitionBy(['year', 'artist_id']) \\\n",
     "    .option('schema', song_table_schema) \\\n",
@@ -182,6 +171,8 @@
     }
    ],
    "source": [
+    "df_artists = basic_pipeline((df_song_data, artist_table_schema)).distinct()\n",
+    "\n",
     "df_artists.write \\\n",
     "    .partitionBy(['artist_id']) \\\n",
     "    .option('schema', artist_table_schema) \\\n",
@@ -192,16 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "from pyspark.sql.functions import year, month\n",
+    "\n",
+    "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
     "df_songplays \\\n",
     "    .withColumn('year', year('start_time')) \\\n",
     "    .withColumn('month', month('start_time')) \\\n",
     "    .write \\\n",
-    "    .partitionBy(['year', 'month'])\n",
+    "    .partitionBy(['year', 'month']) \\\n",
     "    .option('schema', songplay_table_schema) \\\n",
     "    .mode('overwrite') \\\n",
     "    .save('s3a://dutrajardim/udacity-dl-project/songplays.parquet')"
@@ -209,7 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
+    "\n",
+    "df_times = time_basic_pipeline((df_songplays, time_table_schema)).distinct()\n",
+    "df_times.write \\\n",
+    "    .partitionBy(['year', 'month']) \\\n",
+    "    .option('schema', time_table_schema) \\\n",
+    "    .mode('overwrite') \\\n",
+    "    .save('s3a://dutrajardim/udacity-dl-project/times.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
