created the gatsby project inside de root directory to show charts

--- a/notebooks/olap_notebook.ipynb
+++ b/notebooks/olap_notebook.ipynb
@@ -44,7 +44,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fd029f8eb80>"
+       "<pyspark.sql.session.SparkSession at 0x7f3b5d38fd90>"
       ]
      },
      "execution_count": 2,
@@ -72,16 +72,31 @@
     }
    ],
    "source": [
-    "spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/songplays.parquet').registerTempTable('songplays')\n",
-    "spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/times.parquet').registerTempTable('times')\n",
-    "spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/artists.parquet').registerTempTable('artists')\n",
-    "spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/users.parquet').registerTempTable('users')\n",
-    "spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/songs.parquet').registerTempTable('songs')"
+    "df_songplays = spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/songplays.parquet').alias(\"songplays\")\n",
+    "df_times = spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/times.parquet').alias(\"times\")\n",
+    "df_artists = spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/artists.parquet').alias(\"artists\")\n",
+    "df_users = spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/users.parquet').alias(\"users\")\n",
+    "df_songs = spark.read.format('parquet').load('s3a://dutrajardim/udacity-dl-project/songs.parquet').alias(\"songs\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# artists.name, songplays.level, times.weekday\n",
+    "cube_level_weekday_name = \\\n",
+    "    df_songplays \\\n",
+    "        .join(df_times, on='start_time', how='left') \\\n",
+    "        .join(df_artists, on='artist_id', how='left') \\\n",
+    "        .fillna(\"unknown\", subset=['name']) \\\n",
+    "        .cube('level', 'weekday', 'name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -93,52 +108,129 @@
     }
    ],
    "source": [
-    "#TODO: Check why there of weekday as NAN\n",
-    "spark.sql(\"\"\"\n",
-    "SELECT songplays.level, times.weekday, artists.name, COUNT(*) as count\n",
-    "FROM songplays\n",
-    "JOIN times on songplays.start_time = times.start_time\n",
-    "JOIN artists on songplays.artist_id = artists.artist_id\n",
-    "GROUP BY CUBE (songplays.level, times.weekday, artists.name)\n",
-    "ORDER BY count DESC, weekday ASC\n",
-    "LIMIT 10\n",
-    "\"\"\").write.format('parquet').mode('overwrite').save('s3a://dutrajardim/olap-cubes/level-weekday-artists.parquet')"
+    "cube_level_weekday_name.count() \\\n",
+    "    .write.format('parquet') \\\n",
+    "    .mode('overwrite') \\\n",
+    "    .save('s3a://dutrajardim/olap-cubes/level-weekday-artist.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "cube_year_week_gender = \\\n",
+    "    df_songplays.select(['start_time', 'user_id', 'song_id']) \\\n",
+    "        .join(df_times.select(['start_time', 'week']), on='start_time', how='left') \\\n",
+    "        .join(df_users.select(['user_id', 'gender']), on='user_id', how='left') \\\n",
+    "        .join(df_songs.select(['song_id', 'year']), on='song_id', how='left') \\\n",
+    "        .fillna({\n",
+    "            'gender': \"unknown\",\n",
+    "            'year': -1\n",
+    "        }) \\\n",
+    "        .cube('year', 'week', 'gender')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "+-------+\n",
-      "|weekday|\n",
-      "+-------+\n",
-      "|      1|\n",
-      "|      6|\n",
-      "|      3|\n",
-      "|      5|\n",
-      "|      4|\n",
-      "|      7|\n",
-      "|      2|\n",
-      "+-------+\n",
-      "\n"
+      "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "spark.sql(\"\"\"\n",
-    "SELECT DISTINCT(weekday)\n",
-    "FROM times\n",
-    "\"\"\").show()"
+    "cube_year_week_gender.count() \\\n",
+    "    .write.format('parquet') \\\n",
+    "    .mode('overwrite') \\\n",
+    "    .save('s3a://dutrajardim/olap-cubes/year-week-gender.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>name</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>8106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>free</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>paid</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6324</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  level  weekday  name  count\n",
+       "0  None      NaN  None   8106\n",
+       "1  free      NaN  None   1782\n",
+       "2  paid      NaN  None   6324"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "olap = spark.read.format('parquet').load('s3a://dutrajardim/olap-cubes/level-weekday-artist.parquet')\n",
+    "olap.where('weekday IS NULL AND name IS NULL').toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
