--- a/notebooks/spark_notebook.ipynb
+++ b/notebooks/spark_notebook.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import pandas as pd\n",
-    "from pyspark.sql.functions import round as spark_round\n",
+    "from pyspark.sql.functions import round as spark_round, desc\n",
     "\n",
     "sys.path.append('..')\n",
     "from etl import create_spark_session\n",
-    "from schemas import song_data_schema, log_data_schema, user_table_schema, song_table_schema, artist_table_schema, songplay_table_schema, time_table_schema\n",
+    "\n",
+    "from schemas import song_data_schema, log_data_schema, user_table_schema, \\\n",
+    "    song_table_schema, artist_table_schema, songplay_table_schema, \\\n",
+    "    time_table_schema, user_table_schema_with_start_time\n",
+    "\n",
     "from basic_pipeline import create_basic_pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,10 +51,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f5d3dd07700>"
+       "<pyspark.sql.session.SparkSession at 0x7f5a383d4b50>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,18 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
     "# spark.conf.set(\"spark.sql.sources.partitionOverwriteMode\",\"dynamic\")\n",
-    "df_users = basic_pipeline((df_log_data, user_table_schema)).where('user_id IS NOT NULL').distinct()\n",
+    "# some users are repeated but with a new level\n",
+    "uniqueRowFields = list(filter(lambda name: name not in ['start_time', 'level'], user_table_schema.names)) \n",
+    "df_users = basic_pipeline((df_log_data, user_table_schema_with_start_time)) \\\n",
+    "    .where('user_id IS NOT NULL') \\\n",
+    "    .orderBy(desc('start_time')).dropDuplicates(uniqueRowFields).drop('start_time')\n",
+    "\n",
     "df_users.write \\\n",
     "    .option('schema', user_table_schema) \\\n",
     "    .format('parquet') \\\n",
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
