--- a/notebooks/pyarrow_notebook.ipynb
+++ b/notebooks/pyarrow_notebook.ipynb
@@ -47,22 +47,247 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = s3_fs.glob('s3://dutrajardim/udacity-dl-project/users.parquet/**/*.parquet')\n",
+    "users_table = pq.read_table(paths, filesystem=s3_fs)\n",
+    "df_users = users_table.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>level</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>105</td>\n",
+       "      <td>105</td>\n",
+       "      <td>105</td>\n",
+       "      <td>105</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>85</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Jayden</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>F</td>\n",
+       "      <td>free</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>60</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       first_name last_name gender level  user_id\n",
+       "count         105       105    105   105      105\n",
+       "unique         85        87      2     2       97\n",
+       "top        Jayden     Jones      F  free       88\n",
+       "freq            4         4     60    83        2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_users.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = s3_fs.glob('s3://dutrajardim/udacity-dl-project/songs.parquet/**/*.parquet')\n",
+    "songs_table = pq.read_table(paths, filesystem=s3_fs)\n",
+    "df_songs = songs_table.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = s3_fs.glob('s3://dutrajardim/udacity-dl-project/times.parquet/**/*.parquet')\n",
+    "times_table = pq.read_table(paths, filesystem=s3_fs)\n",
+    "df_times = times_table.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = s3_fs.glob('s3://dutrajardim/udacity-dl-project/songplays.parquet/**/*.parquet')\n",
+    "songplays_table = pq.read_table(paths, filesystem=s3_fs)\n",
+    "df_songplays = songplays_table.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = s3_fs.glob('s3://dutrajardim/udacity-dl-project/users.parquet/*/*.parquet')\n",
-    "users_table = pq.read_table(paths, filesystem=s3_fs, columns=['gender', 'user_id'])"
+    "paths = s3_fs.glob('s3://dutrajardim/olap-cubes/year-week-gender.parquet/*.parquet')\n",
+    "olap_table = pq.read_table(paths, filesystem=s3_fs)\n",
+    "df_olap = olap_table.to_pandas()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>week</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>8056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2288</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     year  week   gender  count\n",
+       "170   NaN   NaN     None   8056\n",
+       "204   NaN   NaN        F   5482\n",
+       "264   NaN   NaN  unknown    286\n",
+       "276   NaN   NaN        M   2288"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = users_table.to_pandas()\n",
-    "data = df.groupby('gender').count()['user_id'].values"
+    "df_olap[df_olap['year'].isnull() & df_olap['week'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7734"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_songplays['song_id'].isnull().sum()"
    ]
   },
   {
