created the etl script from commands in spark_notebook

--- a/notebooks/spark_notebook.ipynb
+++ b/notebooks/spark_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f5a383d4b50>"
+       "<pyspark.sql.session.SparkSession at 0x7f38acd88130>"
       ]
      },
      "execution_count": 2,
@@ -67,23 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_log_data = spark.read.format('json').schema(log_data_schema).option(\"recursiveFileLookup\",True).load('s3a://udacity-dend/log_data')\n",
-    "df_song_data = spark.read.format('json').schema(song_data_schema).option(\"recursiveFileLookup\",True).load('s3a://udacity-dend/song_data')\n",
-    "\n",
-    "df_joined = df_log_data.join(\n",
-    "    df_song_data, \n",
-    "    on=(df_log_data.song == df_song_data.title) & (spark_round(df_log_data.length, 4) == spark_round(df_song_data.duration, 4)),\n",
-    "    how='LEFT'\n",
-    ")"
+    "df_song_data = spark.read.format('json').schema(song_data_schema).option(\"recursiveFileLookup\",True).load('s3a://udacity-dend/song_data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_songs = basic_pipeline((df_song_data, song_table_schema))\n",
     "df_songs.write \\\n",
@@ -196,20 +184,21 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pyspark.sql.functions import year, month\n",
+    "from pyspark.sql.functions import expr\n",
+    "\n",
+    "df_joined = df_log_data.alias('log_data') \\\n",
+    "    .join(\n",
+    "        df_songs.select(['song_id', 'artist_id', 'title', 'duration']).alias('songs'), \n",
+    "        on=expr(\"log_data.song = songs.title AND ROUND(log_data.length, 4) = ROUND(songs.duration, 4)\"),\n",
+    "        how='LEFT'\n",
+    "    )\n",
     "\n",
     "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
     "df_songplays \\\n",
-    "    .withColumn('year', year('start_time')) \\\n",
-    "    .withColumn('month', month('start_time')) \\\n",
+    "    .withColumn('year', expr(\"year(start_time)\")) \\\n",
+    "    .withColumn('month', expr(\"month(start_time)\")) \\\n",
     "    .write \\\n",
     "    .partitionBy(['year', 'month']) \\\n",
     "    .option('schema', songplay_table_schema) \\\n",
@@ -219,15 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_songplays = basic_pipeline((df_joined, songplay_table_schema))\n",
     "\n",
@@ -241,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
