--- a/notebooks/olap_notebook.ipynb
+++ b/notebooks/olap_notebook.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# master=k8s://127.0.0.1:16443\n",
     "import sys\n",
     "import pandas as pd\n",
     "\n",
@@ -264,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
